# AIMMO_Team6-1

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  deploy.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.envs/: .mongodb
.github/workflows/: pull_request.yml
apps/: urls.py  wsgi.py
apps/comments/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_comment_post.py  0002_rename_comments_comment.py  0003_alter_comment_parent.py  0003_comment_user.py
apps/config/: common.py  local.py
apps/posts/: admin.py  models.py  permissons.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_auto_20211102_0005.py  0002_auto_20211102_1147.py  0002_initial.py  0002_post_author.py  0003_auto_20211102_1811.py  0003_remove_category_slug.py
apps/posts/tests/: test_viewsets.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_id.py
apps/users/test/: test_views.py
apps/users/tests/: test_viewsets.py
config/: urls.py  wsgi.py
config/settings/: common.py  local.py  production.py  test.py
crud/: wsgi.py
crud/config/: common.py  local.py
docs/: index.md
docs/api/: authentication.md  comments.md  posts.md  users.md
nginx/: conf.d
test/factories/: __init__.py  posts.py  users.py
test/schema/: __init__.py  posts.py  users.py
