[tool.poetry]
name = "crud-drf"
version = "0.1.0"
description = ""
authors = ["ShinJam <nevvjann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2021.3"
Django = "^3.2.8"
django-configurations = "^2.2"
gunicorn = "^20.1.0"
newrelic = "^7.2.2"
psycopg2-binary = "^2.9.1"
dj-database-url = "^0.5.0"
django-model-utils = "^4.2.0"
django-unique-upload = "^0.2.1"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^21.1"
ipdb = "^0.13.9"
ipython = "^7.28.0"
mkdocs = "^1.2.3"
flake8 = "^4.0.1"
mock = "^4.0.3"
factory-boy = "^3.2.0"
django-nose = "^1.4.7"
nose-progressive = "^1.5.2"
coverage = "^6.0.2"
django-storages = "^1.12.2"
boto3 = "^1.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
